Update BookingService.java
Updated line 89